@@ -1372,11 +1372,7 @@ if [ "$DEBUGGING" = debug ] ; then
   elif [ ${HSYS} != "win32msvc" ]; then
     XCFLAGS=$XCFLAGS' -g'
   fi
-  XCFLAGS=$XCFLAGS' -DDEBUG_OS_ERROR -DDEBUG_BYTECODE -DSAFETY=3'
-  if [ "$cpu" != x86_64 ]; then
-    # http://sourceforge.net/tracker/index.php?func=detail&aid=1413016&group_id=1355&atid=101355
-    XCFLAGS=$XCFLAGS' -DDEBUG_SPVW'
-  fi
+  XCFLAGS=$XCFLAGS' -DDEBUG_OS_ERROR -DDEBUG_SPVW -DDEBUG_BYTECODE -DSAFETY=3'
   case "$CC" in
     *"g++"* ) XCFLAGS=$XCFLAGS' -DDEBUG_GCSAFETY'; ;;
   esac
